objects/Staging_Property_Insurer__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Agreement_Date__c</fullName>
        <label>Concession Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Instance__c</fullName>
        <label>DWH: Instance</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Source_System__c</fullName>
        <label>DWH:Source System</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Parent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Parent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Reference_Insurer__c</fullName>
        <label>Group Reference Insurer</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurer_Short_Name__c</fullName>
        <label>Insurer Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <label>Insurer</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Line_2__c</fullName>
        <label>Name Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurer_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Property Insurer External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telex_Number__c</fullName>
        <label>Telex Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Staging Property Insurer</label>
    <nameField>
        <label>Staging Property Insurer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Property Insurers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>